# controller/login.go
@@ -1,0 +1,8 @@
+package controller
+
+import "net/http"
+
+type LoginController interface {
+	Login(w http.ResponseWriter, r *http.Request)
+	LoginToken(w http.ResponseWriter, r *http.Request)
+}
