# docs/swagger.yaml
@@ -15,6 +15,13 @@ definitions:
       saveInfoId:
         type: integer
     type: object
+  request.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   request.RegisterRequest:
     properties:
       email:
@@ -65,6 +72,28 @@ paths:
       summary: Confirm code register
       tags:
       - Register
+  /public/login:
+    post:
+      consumes:
+      - application/json
+      description: Send info login
+      parameters:
+      - description: Send info
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Send info login
+      tags:
+      - Login
   /public/send_info:
     post:
       consumes:
